--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+  /* font-family: 'Roboto', sans-serif; */
+  font-family: 'Press Start 2P', cursive;
 }
 
 :root {
