--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   /* font-family: 'Roboto', sans-serif; */
   font-family: 'Press Start 2P', cursive;
+  font-size: 14 px;
 }
 
 :root {
@@ -19,8 +20,15 @@ html,
 body {
   margin: 0;
   padding: 0;
+  
 }
 
 a {
   color: inherit;
 } 
+
+#root{
+  min-height: calc(100vh - var(--bodyPaddingTop));
+  display: flex;
+  flex-direction: column;
+}
